<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_view"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <include layout="@layout/titlebar"/>

   	<TableLayout
    	android:layout_width="fill_parent"
    	android:layout_height="0dip"
    	android:layout_weight="1"
    	android:padding="6dip">
    	<TableRow
    	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1">
    	    <Button android:id="@+id/DbButton_area"
            	style="@style/DashboardButton"
            	android:onClick="onClickDbButton"
            	android:text="@string/title_area"
            	android:drawableTop="@drawable/dashboard_button_area"/>
        	<Button android:id="@+id/DbButton_run"
            	style="@style/DashboardButton"
            	android:onClick="onClickDbButton"
            	android:text="@string/title_run"
            	android:drawableTop="@drawable/dashboard_button_run"/>
    	</TableRow>
    	<TableRow 
    	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1">
    	    <Button android:id="@+id/DbButton_debug"
            	style="@style/DashboardButton"
            	android:onClick="onClickDbButton"
            	android:text="@string/title_debug"
            	android:drawableTop="@drawable/dashboard_button_debug"/>
        	<Button android:id="@+id/DbButton_placeholder"
            	style="@style/DashboardButton"
            	android:drawableTop="@drawable/dashboard_button_placeholder"/>
    	</TableRow>
   	</TableLayout>
   	
</LinearLayout>
